# Multi-Agent-AI-Researcher

./: README.md
backend/: pyproject.toml
backend/app/config/: conf.py
backend/app/services/ai/: agents.py  pipeline.py  tools.py
client/: .env.example  .gitignore  index.html  package-lock.json  package.json  vercel.json
client/src/: routeTree.gen.ts  router.tsx  styles.css
client/src/components/common/: ErrorState.tsx  ErrorStates.tsx  InterruptedState.tsx  ScoreRing.tsx  StatusBadge.tsx
client/src/components/landing/: CTA.tsx  FadeIn.tsx  Features.tsx  Footer.tsx  Hero.tsx  Liveworking.tsx  Nav.tsx  PipelineFlow.tsx  Process.tsx  index.tsx
client/src/hooks/: useResearchStream.ts
client/src/lib/: format.ts
client/src/routes/: __root.tsx  app.history.tsx  app.index.tsx  app.report.$id.tsx  app.tsx  index.tsx  sign-in.tsx  sign-up.tsx
client/src/services/: api.ts  constants.ts  history.ts  research.ts
client/src/types/: index.ts
server/: .gitignore  .vercelignore  main.py  requirements.txt  test_disconnect.py  test_interrupt.py
server/alembic/: env.py
server/alembic/versions/: 0421d380f000_update_report_table.py  28a9e44a4558_add_user_and_link_report.py  771ebdd0fa3b_initial_schema.py  eff4edad4ea6_generate_updated_schems.py
server/app/: __init__.py
server/app/api/: dependencies.py  router.py
server/app/core/: auth.py  config.py
server/app/db/: database.py  session.py
server/app/models/: __init__.py  domain.py
server/app/schemas/: __init__.py  domain.py
server/app/services/: agent.py  history.py  pdf.py  state.py
(+16 files in other folders)
